--- a/Estilos/activar.css
+++ b/Estilos/activar.css
@@ -233,4 +233,47 @@ body{
   margin-top: 25px;
 }
 
+.boton-continuar-final {
+  background: linear-gradient(90deg, #4aa3ff, #69c3ff);
+  color: white;
+  border: none;
+  padding: 12px 26px;
+  border-radius: 18px;
+  cursor: pointer;
+  font-weight: 600;
+  font-size: 15px;
+
+  box-shadow: 0 0 20px rgba(0, 150, 255, 0.45);
+  transition: 0.2s;
+}
+
+.boton-continuar-final:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 30px rgba(0, 170, 255, 0.6);
+}
+
+
+
+
+.mensaje-final {
+  position: relative;
+  display: none;                  /* Oculto al inicio */
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+
+  background: rgba(10, 20, 40, 0.6);
+  padding: 40px 80px;
+  margin-top: 50px;
+
+  border-radius: 22px;
+  box-shadow: 0 0 40px rgba(0, 120, 255, .25);
+  backdrop-filter: blur(6px);
+
+  width: fit-content;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 
